skins/oasis/css/core/_AccountNavigation.scss
.AccountNavigation {
	line-height: 20px;
	list-style: none;
	position: absolute;
	top: 1px;
	right: 15px;
	li {
		border: 0;
		height: 30px;
		margin-top: 0;
		padding: 6px 0 0;
		position: relative;
		&:hover {
			@include linear-gradient(false, top, rgba(#000, 0), 0, #000, 100%);
		}
		&.nohover:hover {
			background: transparent;
		}
		&:last-child a {
			border: 0;
		}
	}
	a {
		border-right: 1px solid mix($color-header-text, $color-header, 20%);
		display: inline-block;
		height: 22px;
		line-height: 24px;
		padding: 0 15px;
		&:hover {
			text-decoration: none;
		}
	}
	#fbconnect {
		a {
			border: none;
			line-height: 1em;
			height: 18px;
			padding: 0;
		}
	}
	.avatar {
		float: left;
		margin-right: 5px;
		vertical-align: middle;
	}
	.subnav {
		@include menu-heavy;
		display: block;
		top: -9999px;
		&.show {
			left: 0;
			top: 34px;
		}
		li {
			float: none;
			height: auto;
			&:hover {
				background-image: none;
			}
		}
		a {
			border-right: 0;
		}
	}
	>li>a {
		color: $color-header-text;
		&:visited, &:active {
			color: $color-header-text;
		}
	}
}

