Changed the alignment of the AccountNavigation dropdown from left to right (BugId:5035)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@37475 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_AccountNavigation.scss
+++ b/skins/oasis/css/core/_AccountNavigation.scss
@@ -48,7 +48,7 @@
 		display: block;
 		top: -9999px;
 		&.show {
-			left: 0;
+			right: 0;
 			top: 34px;
 		}
 		li {
